<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Keys & IDs -->
    <string name="gpg_app_id" translatable="false">380173086743</string>
    <string translatable="false" name="google_web_client_id" >380173086743-qasd4ru2o2jnblbugg6vkj2em6d2uih1.apps.googleusercontent.com</string>
    <string translatable="false" name="facebook_app_id">1760322360873183</string>
    <string translatable="false" name="fb_login_protocol_scheme">fb1760322360873183</string>
    <string translatable="false" name="google_places_api_key">AIzaSyBrZsS2athB3s4LGWpQdxh7yvSYHI5R3NI</string>

    <string translatable="false" name="achievement_new_bee">CgkIl-DToIgLEAIQAQ</string>
    <string translatable="false" name="achievement_join_the_swarm">CgkIl-DToIgLEAIQBg</string>
    <string translatable="false" name="achievement_curious_bee">CgkIl-DToIgLEAIQAg</string>
    <string translatable="false" name="achievement_bronze_wings">CgkIl-DToIgLEAIQEw</string>
    <string translatable="false" name="achievement_silver_wings">CgkIl-DToIgLEAIQFA</string>
    <string translatable="false" name="achievement_gold_wings">CgkIl-DToIgLEAIQFQ</string>
    <string translatable="false" name="achievement_crystal_wings">CgkIl-DToIgLEAIQFg</string>
    <string translatable="false" name="achievement_secretive_bee">CgkIl-DToIgLEAIQAw</string>
    <string translatable="false" name="achievement_recruiting_bee">CgkIl-DToIgLEAIQBQ</string>
    <string translatable="false" name="achievement_chatty_bee">CgkIl-DToIgLEAIQBw</string>
    <string translatable="false" name="achievement_queen_bee">CgkIl-DToIgLEAIQCA</string>

    <!-- Titles -->
    <string name="app_name" translatable="false">Bee</string>
    <string name="title_activity_slideshow">Bee</string>
    <string name="title_activity_home">My crops</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_store">Bee Store</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_experiment_details">Details</string>
    <string name="title_activity_store_experiment_details">Preview</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_reward">Reward</string>
    <string name="title_activity_gpg">Play Games</string>

    <!-- Global -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_privacy">Privacy</string>
    <string name="action_share">Share</string>
    <string name="search_hint">Experiment name</string>
    <string name="next">Next</string>
    <string name="level">Level</string>

    <!-- User feedbacks -->
    <string name="error">Error</string>
    <string name="failed_to_connect">Impossible to sign in. Check your association login and password.</string>
    <string name="empty_field">Check all fields are filled</string>
    <string name="experiment_exception_on_closure">An experiment did not close correctly</string>
    <string name="status_changed_to_anonymous">You are now disconnected</string>
    <string name="error_field_required">Requested field</string>
    <string name="signin_error_invalid_password">Password is too short</string>
    <string name="register_error_invalid_repeat_password">Different password</string>

    <!-- Register / Sign in / User infos -->
    <string name="register">Register</string>
    <string name="register_anonymous">Register as Anonymous</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user_identity">%1$s</string>
    <string name="pseudo">Email Address</string>
    <string name="anonymous_user">Unknown Bee</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Confirm password</string>
    <string name="registration_not_implemented">This kind of registration is not enabled yet.</string>
    <string name="social_networks">Or sign in with your favorite social network:</string>
    <string name="forgotten_password">Forgot your password?</string>
    <string name="missing_email_address">Please fill in your email address</string>
    <string name="mail_incoming">A mail should arrive shortly</string>
    <string name="validation_mail_incoming">You will receive an email to confirm your address</string>
    <string name="anonymous_share">Everything you share in Bee is anonymous !</string>

    <!-- Slides text -->
    <string name="slide_welcome_back">Welcome back</string>
    <string name="slide_what">Bee makes it easy to collect data with crowds of mobile phone sensors.</string>
    <string name="slide_how">Share your data with us to get a better World :O</string>
    <string name="slide_reward_title">Get reward by sharing data</string>
    <string name="slide_reward_desc">Help compagnies, cities or researches to make better products, services or research by sharing data</string>
    <string name="slide_connect_join">
        <![CDATA[

                    By joining, you accept the <a href="http://www.apisense.com/terms/bee">Terms</a> and
                    <a href="http://www.apisense.com/privacy/bee">Privacy</a>.

        	    ]]>
    </string>
    <string name="slide_connect_anonym">
                <![CDATA[

                    Enter as <u>Anonymous</u> without any rewards.

                ]]>
        </string>
    <string name="slide_connect_continue">OR CONTINUE WITH</string>

    <!-- Experiments -->
    <string name="exp_details_name">%1$s</string>
    <string name="exp_details_organization">By %1$s</string>
    <string name="exp_details_version">Version %1$d</string>
    <string name="exp_details_description">Description:\t %1$s</string>
    <string name="exp_details_subscribers" translatable="false">%1$d</string>
    <string name="exp_details_subscribers_description">Number of subscribers</string>
    <string name="exp_details_update" translatable="false">%1$s</string>
    <string name="crop_stats_subscribers">Number of subscriptions: %1$d</string>
    <string name="crop_stats_data_volume">Exported data: %1$.2f Kib</string>
    <string name="crop_stats_creation_date">Created: %1$s</string>
    <string name="crop_stats_local_traces">Local traces: %1$d</string>
    <string name="crop_stats_total_uploaded">Uploaded traces: %1$d</string>
    <string name="experiment_activity_7_days">Activity for the past 7 days</string>
    <string name="experiment_started">Experiment %1$s started</string>
    <string name="experiment_stopped">Experiment %1$s stopped</string>
    <string name="add_new_experiments">No mission here :\'(\n\nClick the Bee store button to add some !</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="experiment_image_desc">Experiment logo</string>
    <string name="running">Running</string>
    <string name="not_running">Not running</string>
    <string name="no_data_last_week">No data uploaded the last 7 days</string>

    <!-- Settings -->
    <string name="settings_section_account">Account Management</string>
    <string name="settings_action_register">Create an account</string>
    <string name="settings_action_logout">Logout</string>
    <string name="settings_privacy_description">
        You can choose to de-activate some sensors,
         we will then no longer propose you crop using them:
    </string>
    <string name="settings_manage_sensors">Privacy Settings</string>
    <string name="settings_save_sensors">Apply modifications</string>
    <string name="settings_label_version">Application Version</string>
    <string name="settings_btn_update">Look for update</string>
    <string name="settings_placeholder_version">%1$d</string>
    <string name="settings_section_about">About</string>
    <string name="settings_accessibility_description">
        Some sensors needs to use an accessibility service
        to monitor actions outside of this application, you may want to enable it:
    </string>
    <string name="settings_accessibility_disabled">Enable \'%0$s\'</string>
    <string name="settings_accessibility_enabled">\'%0$s\' is enabled</string>
    <string name="no_available_sensors">We couldn\'t retrieve your sensor preferences</string>
    <string name="account_share">Share Bee experience with your contacts and help to improve research</string>
    <string name="account_logout">If you want to stop all contributions to your subscribed collects</string>

    <!-- Store -->
    <string name="store_section_categories">Categories</string>
    <string name="store_section_general">General</string>
    <string name="store_section_home">Home</string>
    <string name="experiment_subscribed">You now contribute to experiment %1$s</string>
    <string name="experiment_unsubscribed">You don\'t contribute to experiment %1$s anymore</string>
    <string name="experiment_updated">Experiment %1$s has been updated</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_unsubscribe">UnSubscribe</string>
    <string name="action_read_qrcode">install from QRCode</string>
    <string name="action_update">Update crop</string>
    <string name="no_available_experiments">No experiment have been found !</string>
    <string name="no_installed_experiments">No experiment installed yet !</string>
    <string name="store_search">Search</string>
    <string name="store_sort">Sort</string>
    <string name="store_sort_name">Sort by name</string>
    <string name="store_sort_author">Sort by author</string>
    <string name="store_sort_subscribers">Sort by number of users</string>
    <string name="store_sort_update">Sort by last updated</string>

    <!-- Rewards -->
    <string name="reward_dollars">DOLLARS</string>
    <string name="reward_badges">BADGES</string>
    <string name="reward_thanks">THANKS</string>
    <string name="reward_monthly">REWARDS THIS MONTH</string>

    <!-- About -->
    <string name="about_versions_title">Softwares version:</string>
    <string name="bee_version" translatable="false">Bee:\t\t %1$s</string>
    <string name="apisense_version" translatable="false">APISENSE SDK:\t\t %1$s</string>
    <string name="about_team">
        APISENSE® Team:\n
          \t\t- Romain Rouvoy\n
          \t\t- Nicolas Haderer\n
          \t\t- Christophe Ribeiro\n
          \t\t- Antoine Veuiller\n
          \t\t- Julien Duribreux\n
          \t\t- Romain Sommerard
    </string>

    <string name="about_copyright">
        <![CDATA[
            <p>
                Bee is a part of <a href="https://www.apisense.io" >APISENSE</a> platform and it aims to research.<br/>
                For more information, you can contact us at <a href="mailto:contact@apisense.io">contact@apisense.io</a>.<br/>
            </p>
            <p>&copy; 2018 <a href="www.inria.fr/">Inria</a>, all rights reserved. <a href="www.apisense.io/terms">Terms Of Service</a>.</p>
	    ]]>
    </string>
    <string name="share_bee_text">Help science by using Bee! https://play.google.com/store/apps/details?id=com.apisense.bee</string>

    <string name="accessibility_service_name">Bee application monitor</string>
    <string name="accessibility_service_description">Enable Bee to monitor your foreground applications</string>

    <!-- Google Play Games -->
    <string name="signin_other_error">GPG Error</string>
    <string name="gamehelper_unknown_error">GPG Unknown error</string>
    <string name="gamehelper_app_misconfigured">GPG app misconfigured</string>
    <string name="gamehelper_sign_in_failed">GPG Sign in failed</string>
    <string name="gamehelper_license_failed">GPG licence failed</string>

    <string name="error_invalid_session">Your session has been invalidated, please login again</string>
</resources>
