<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="top"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context="com.apisense.bee.ui.fragment.AboutFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_versions_title" />

        <TextView
            android:id="@+id/about_bee_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bee_version" />

        <TextView
            android:id="@+id/about_apisense_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apisense_version" />

        <TextView
            android:id="@+id/about_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/about_team" />

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:text="@string/about_copyright" />
    </LinearLayout>
</ScrollView>