<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_share_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin"
            android:text="@string/account_share"/>

        <Button
            android:id="@+id/account_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            android:background="@color/aps_accent"
            android:textColor="@color/aps_white" />

        <TextView
            android:id="@+id/account_logout_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_vertical_margin"
            android:layout_marginBottom="@dimen/text_vertical_margin"
            android:text="@string/account_logout"/>

        <Button
            android:id="@+id/account_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_action_logout"
            android:background="@color/aps_accent"
            android:textColor="@color/aps_white" />

    </LinearLayout>
</ScrollView>