<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/material_toolbar"
        style="@style/ApisenseActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivToolbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_launcher"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_padding"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding">

            <TextView
                android:id="@+id/settings_section_account"
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_section_account"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/settings_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_action_logout"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/settings_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToRegister"
                android:text="@string/settings_action_register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/settings_section_general"
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_section_general"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/min_padding_bottom">

                <TextView
                    android:id="@+id/settings_label_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/settings_label_version"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/settings_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_placeholder_version"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <TextView
                android:id="@+id/settings_section_about"
                style="@style/sectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_section_about"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/settings_about_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_about_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>