<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="com.apisense.bee.ui.fragment.AboutSettingsFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="15dp"
            android:text="@string/about_versions_title" />

        <TextView
            android:id="@+id/about_bee_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/about_version_title"
            android:layout_alignStart="@id/about_version_title"
            android:layout_below="@id/about_version_title"
            android:paddingLeft="30dp"
            android:text="@string/bee_version" />

        <TextView
            android:id="@+id/about_apisense_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/about_bee_version"
            android:layout_alignStart="@id/about_bee_version"
            android:layout_below="@id/about_bee_version"
            android:paddingLeft="30dp"
            android:text="@string/apisense_version" />

        <TextView
            android:id="@+id/about_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/about_apisense_version"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:paddingLeft="15dp"
            android:text="@string/about_team" />

        <TextView
            android:id="@+id/about_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/about_team"
            android:layout_marginTop="40dp"
            android:autoLink="all"
            android:gravity="start"
            android:paddingLeft="15dp"
            android:text="@string/about_resources" />

        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/about_resources"
            android:layout_marginTop="40dp"
            android:autoLink="all"
            android:gravity="start"
            android:paddingLeft="15dp"
            android:text="@string/about_copyright" />
    </RelativeLayout>
</ScrollView>